--- a/SignalR.Client.Web/Stylesheets/StyleSheet.css
+++ b/SignalR.Client.Web/Stylesheets/StyleSheet.css
@@ -1,14 +1,20 @@
-﻿.mainScreen {
+﻿body {
+    font-family: Arial;
+}
+
+.mainScreen {
     display: none;
 }
 
 .initializationScreen {
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px;
-    background: #000;
+    padding: 3em;
+    background: #0c2577;
     color: #fff;
+    font-weight: bold;
 }
 
 table {
@@ -22,10 +28,10 @@ table th {
 
 table td {
     border: solid 1px #000;
-    padding: 1em;
+    padding: .25em;
 }
 
-.center {
+table.center {
     margin-left: auto;
     margin-right: auto;
 }
