--- a/SignalR.Client.Web/Stylesheets/StyleSheet.css
+++ b/SignalR.Client.Web/Stylesheets/StyleSheet.css
@@ -21,53 +21,100 @@ table {
     border-collapse: collapse;
     table-layout: fixed;
     white-space: nowrap;
-    width: 90%;
+    width: 100%;
+    background-color: #0547ac;
+    color: #fff;
 }
 
 table th {
-    border: solid 2px #000;
-    padding: 1em;
+    border: solid 1px #fff;
+    background-color: #0c2577;
+    color: #fff;
+    padding: .1em;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 table td {
-    border: solid 1px #000;
-    padding: .25em;
+    border: solid 1px #fff;
+    padding: .5em 1em .5em 1em;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-table.center {
+.stripped {
+    background-color: #0c2577;
+}
+
+.hover {
+    background-color: #0574ac;
+}
+
+.center {
     margin-left: auto;
     margin-right: auto;
 }
 
-img.screenshot {
+
+table tr .attUID {
+    width: 85px;
+}
+
+table tr .agentName {
+    width: 250px;
+}
+
+table tr .sessionStartTime {
+    width: 100px;
+}
+
+table tr .sessionDuration {
+    width: 150px;
+}
+
+table tr .nodeStartTime {
+    width: 85px;
+}
+
+table tr .nodeDuration {
+    width: 150px;
+}
+
+table tr .skillGroup {
+    width: 100px;
+}
+
+.nav-tabs {
+    background-color: #0c2577;
+    color: #fff;
+}
+
+.nav-tabs > li > a {
+    border: medium none;
+    color: #fff;
+    font-weight: bold;
+}
+
+.nav .active a {
+    background-color: #0547ac !important;
+    color: #fff !important;
+}
+
+.nav-tabs > li > a:hover {
+    background-color: #0574ac !important;
+    border: medium none;
+    border-radius: 0;
+}
+
+.screenshot {
     display: block;
     margin: auto;
 }
 
-table tr th:nth-child(1) {
-    width: 60px;
+.highlightDuration {
+    color: #ff0000;
 }
 
-table tr th:nth-child(2) {
-    width: 185px;
-}
-
-table tr th:nth-child(3) {
-    width: 100px;
-}
-
-table tr th:nth-child(4) {
-    width: 90px;
-}
-
-table tr th:nth-child(6) {
-    width: 85px;
-}
-
-table tr th:nth-child(7) {
-    width: 90px;
+#serverStartTime {
+    font-weight: bold;
 }
