--- a/SignalR.Client.Web/Popup/Stylesheets/StyleSheet.css
+++ b/SignalR.Client.Web/Popup/Stylesheets/StyleSheet.css
@@ -90,7 +90,7 @@ table tr, td {
 
 .header {
     padding: 3em;
-    background-color: padding: 3em;
+    padding: 3em;
     color: #ffffff;
     background-color: #0c2577;
 }
