Added Group By Options, mostly working fails on STALLED/ALL Sessions, possible initialization issue.

--- a/SignalR.Client.Web/Stylesheets/StyleSheet.css
+++ b/SignalR.Client.Web/Stylesheets/StyleSheet.css
@@ -126,3 +126,18 @@ table tr .nodeName {
 #version {
     font-weight: bold;
 }
+
+.buttonrow {
+    text-align: right;
+    background-color: #0c2577;
+    color: #fff;
+}
+
+.buttons {
+    margin-right: 2em;
+}
+
+.buttonrow input {
+    margin-left: 1em;
+    margin-right: .5em;
+}
