Corrected issue with group by on all sessions and stalled sessions.
Added yellow highlight on node timer if on a wait node and exceeding duration expected

--- a/SignalR.Client.Web/Stylesheets/StyleSheet.css
+++ b/SignalR.Client.Web/Stylesheets/StyleSheet.css
@@ -119,6 +119,10 @@ table tr .nodeName {
     color: #ff0000;
 }
 
+.warnWaitScreenDuration {
+    color: #FFFF00;
+}
+
 #serverStartTime {
     font-weight: bold;
 }
