--- a/SignalR.Client.Web/Popup/Stylesheets/StyleSheet.css
+++ b/SignalR.Client.Web/Popup/Stylesheets/StyleSheet.css
@@ -138,3 +138,24 @@ table tr, td {
     color: #FFFFFF;
     font-weight: bold;
 }
+
+
+.flowHistoryWrapper {
+    text-transform: uppercase;
+    background-color: #0547ac;
+    color: #ffffff;
+    margin: 3px;
+    padding: 5px;
+    border: solid 1px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 40%;
+}
+
+.flowHistoryTree {
+    background-color: #fff;
+    height: 200px;
+    overflow: auto;
+    text-align: left;
+}
